--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,6 @@
         "php": ">=5.6.0"
     },
     "autoload": {
-        "psr-4": { "CarghPAAPI\\": "CarghPAAPI" }
+        "psr-4": { "CarghPAAPI\\": "src/" }
     }
 }
